// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth user add roles errors should render an error on the select if error occurred 1`] = `
<div
  className="sc-gzVnrw kFjkBp"
>
  <div
    className="sc-htoDjs cFfunZ"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <label
        className="sc-bdVaJa fgeHwJ"
        htmlFor="role"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Choose new role
        </span>
        <span
          className="sc-htpNat gTYgEH"
        >
          something went wrong
        </span>
        <select
          className="sc-ifAKCX hJKVIA"
          id="role"
          name="role"
          onChange={[MockFunction]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="ROLE_1_option"
            value="ROLE_1"
          >
            Role 1
          </option>
          <option
            data-qa="ROLE_3_option"
            value="ROLE_3"
          >
            Role 3
          </option>
        </select>
      </label>
      <div
        className="sc-dnqmqq hyCbor"
      >
        <button
          className="sc-EHOje kpyxHc"
          data-qa="add-button"
          disabled={false}
          type="submit"
        >
          Add role
        </button>
        <button
          className="sc-EHOje gyNQDO"
          data-qa="cancel-button"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Auth user add roles no roles should render correctly with user and no roles 1`] = `
<div
  className="sc-gzVnrw kFjkBp"
>
  <div
    className="sc-htoDjs cFfunZ"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        data-qa="no-roles"
      >
        No roles available
      </div>
      <div
        className="sc-dnqmqq hyCbor"
      >
        <button
          className="sc-EHOje gyNQDO"
          data-qa="cancel-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Auth user add roles should render the add role page with a filtered list of roles 1`] = `
<div
  className="sc-gzVnrw kFjkBp"
>
  <div
    className="sc-htoDjs cFfunZ"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="role"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Choose new role
        </span>
        <select
          className="sc-ifAKCX hiZDbs"
          id="role"
          name="role"
          onChange={[MockFunction]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="ROLE_1_option"
            value="ROLE_1"
          >
            Role 1
          </option>
          <option
            data-qa="ROLE_3_option"
            value="ROLE_3"
          >
            Role 3
          </option>
        </select>
      </label>
      <div
        className="sc-dnqmqq hyCbor"
      >
        <button
          className="sc-EHOje kpyxHc"
          data-qa="add-button"
          disabled={false}
          type="submit"
        >
          Add role
        </button>
        <button
          className="sc-EHOje gyNQDO"
          data-qa="cancel-button"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
